Overflow issues
Not really sure why overflow was hidden on the pages (aside from the
index page). If any other instances exist feel free to remove, where
necessary.

--- a/src/main/resources/static/css/manage.sass
+++ b/src/main/resources/static/css/manage.sass
@@ -8,9 +8,6 @@ $cool-version-of-white-color: white
 $tablet: "(min-width: 768px) and (max-width: 1023px)"
 $desktop: "(min-width: 1024px)"
 
-body
-  overflow: hidden
-
 .bottom
   margin: 0 auto
   z-index: 666
